<resources>
    <string name="app_name">FreqResponse Meter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="sine_play_btn">Sinewave gen</string>
    <string name="start_test_btn">Start test</string>
    <string name="saved_tests_btn">Saved tests</string>
    <string name="settings">Settings</string>
    <string name="previous">Previous</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>