<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />

    <Button
        android:id="@+id/button_sine_gen"
        android:layout_width="150dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="104dp"
        android:text="@string/sine_play_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_start_test"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_saved_tests"
        android:layout_width="150dp"
        android:layout_height="wrap_content"

        android:text="@string/saved_tests_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_settings"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sine_gen"
        app:layout_constraintVertical_bias="0.273" />

    <Button
        android:id="@+id/button_start_test"
        android:layout_width="150dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="104dp"
        android:text="@string/start_test_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_sine_gen"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_saved_tests"
        app:layout_constraintTop_toBottomOf="@+id/button_start_test"
        app:layout_constraintVertical_bias="0.273" />
</androidx.constraintlayout.widget.ConstraintLayout>